# venue2playlist

./: AGENT.md  README.md  pyproject.toml
src/venue2playlist/: __init__.py  cache.py  cli.py  config.py  logging.py  models.py  pipeline.py
src/venue2playlist/filters/: __init__.py  confidence.py  date_range.py  field.py
src/venue2playlist/parser/: llm.py
src/venue2playlist/sources/: __init__.py  musicbrainz.py  setlist_fm.py
src/venue2playlist/spotify/: __init__.py  client.py  strategies.py
